# tesseract-android-tools-1.00

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/googlecode/tesseract/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/cpp/com_googlecode_leptonica_android/: Android.mk  CMakeLists.txt  common.h
app/src/main/cpp/com_googlecode_tesseract_android/: CMakeLists.txt  tessbaseapi.cpp
app/src/main/cpp/jpeg-6b/: Android.mk  jconfig.h
app/src/main/cpp/tesseract-3.00/ccmain/: tessedit.cpp
app/src/main/cpp/tesseract-3.00/ccutil/: ambigs.cpp
app/src/main/cpp/tesseract-3.00/textord/: topitch.cpp
app/src/main/cpp/tesseract-3.00/training/: combine_tessdata.vcproj
app/src/main/cpp/tesseract-3.00/viewer/: svutil.cpp
app/src/main/java/com/googlecode/tesseract/android/: TessBaseAPI.java
app/src/main/java/com/googlecode/ui/: TestActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/googlecode/tesseract/android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
